--- a/ba3.html
+++ b/ba3.html
@@ -39,7 +39,10 @@
 			background-color: #203049;
 			margin-left: 120px;
 		}
-
+		header img{
+			width: 100%;
+			height: 100%;
+		}
 		.content {
 			display: flex;
 			flex-wrap:wrap; 
@@ -84,7 +87,9 @@
 		<div class="left_menu">
 			<img src="./images/ba3/left_menu.png" alt="">
 		</div>
-		<header></header>
+		<header>
+			<img src="./images/ba3/header.png" alt="">
+		</header>
 		<div class="content">
 			<div class="video_box">
 				<img src="./images/ba3/video.png" alt="">
