--- a/ba3.html
+++ b/ba3.html
@@ -39,10 +39,7 @@
 			background-color: #203049;
 			margin-left: 120px;
 		}
-		header img{
-			width: 100%;
-			height: 100%;
-		}
+
 		.content {
 			display: flex;
 			flex-wrap:wrap; 
@@ -54,12 +51,12 @@
 		.video_box {
 			position: relative;
 			width: calc(100% - 400px);
-			/* padding-bottom: calc(100% * .66); */
+		}
+		.video_box img{
+			height: auto;
 		}
 		.bet_box{
 			width: 400px;
-			/* width: calc(100% - 790px); */
-			/* flex: 0 0 calc(100% - 790px); */
 		}
 		.road_box{
 			width: calc(100% - 400px);
@@ -72,13 +69,9 @@
 		}
 		img{
 			width: 100%;
+			height: 100%;
 		}
-		/* img {
-			position: absolute;
-			width: 100%;
-			top: 0;
-			left: 0;
-		} */
+		
 	</style>
 </head>
 
