--- a/ba3.html
+++ b/ba3.html
@@ -23,55 +23,77 @@
 
 		.wrap {
 			position: relative;
+			width: 100%;
 			max-width: 1220px;
 			margin: auto;
 		}
-		.left_menu{
+
+		.left_menu {
 			position: absolute;
 			left: 0;
 			top: 0;
 			width: 120px;
 			height: 100%;
 		}
+
 		header {
 			width: calc(100% - 120px);
 			height: 40px;
 			background-color: #203049;
-			margin-left: 120px;
+			margin-left: auto;
 		}
 
 		.content {
 			display: flex;
-			flex-wrap:wrap; 
+			flex-wrap: wrap;
 			width: 100%;
 			height: calc(100% - 40px);
 			padding-left: 120px;
 		}
 
-		.video_box {
-			position: relative;
-			width: calc(100% - 400px);
-		}
-		.video_box img{
+
+		.video_box img {
 			height: auto;
 		}
-		.bet_box{
-			width: 400px;
-		}
-		.road_box{
-			width: calc(100% - 400px);
-		}
-		.road_box img{
+
+		.road_box img {
 			height: 100%;
 		}
-		.good_road{
-			width: 400px;
+
+		.video_box,
+		.road_box {
+			position: relative;
+			width: 65%;
+			/* width: calc(100% - 300px); */
+			/* min-width: calc(100% - 300px); */
 		}
-		img{
+
+		.bet_box,
+		.good_road {
+			width: 35%;
+			/* width: 100%; */
+			flex: 1 1 300px;
+		}
+
+		img {
 			width: 100%;
 			height: 100%;
 		}
-		
+
+		@media only screen and (max-width: 1111px) {
+			.left_menu {
+				display: none;
+			}
+
+			header {
+				width: 100%;
+				padding-left: 0;
+			}
+
+			.content {
+				padding-left: 0;
+			}
+		}
 	</style>
 </head>
 
