--- a/ba3.html
+++ b/ba3.html
@@ -67,7 +67,9 @@
 			/* width: calc(100% - 300px); */
 			/* min-width: calc(100% - 300px); */
 		}
-
+		.bet_box{
+			height: 415px;
+		}
 		.bet_box,
 		.good_road {
 			width: 35%;
