--- a/ba3.html
+++ b/ba3.html
@@ -20,10 +20,7 @@
 			height: 100%;
 			background: linear-gradient(#1c1b2d, #294c76 10%, #294c76 45%, #1c1b2d 75%);
 		}
-		body{
 
-			overflow: auto;
-		}
 		.wrap {
 			position: relative;
 			width: 100%;
@@ -69,18 +66,17 @@
 		.video_box,
 		.road_box {
 			position: relative;
-			width: 65%;
-			/* width: calc(100% - 300px); */
-			/* min-width: calc(100% - 300px); */
+			flex: 1 1 69%;
+			/* width: calc(72% - 12px); */
 		}
 
 		.bet_box {
-			height: 415px;
+			min-height: 415px;
 		}
 
 		.bet_box,
 		.good_road {
-			width: 35%;
+			width: 29%;
 			/* width: 100%; */
 			flex: 1 1 300px;
 		}
@@ -88,6 +84,7 @@
 		img {
 			width: 100%;
 			height: 100%;
+			vertical-align: middle;
 		}
 
 		@media only screen and (max-width: 1111px) {
