--- a/ba3.html
+++ b/ba3.html
@@ -67,6 +67,7 @@
 		.road_box {
 			position: relative;
 			flex: 1 1 69%;
+			/* flex: 1 1 calc(70% - 3px); */
 			/* width: calc(72% - 12px); */
 		}
 
