--- a/ba3.html
+++ b/ba3.html
@@ -69,7 +69,7 @@
 		.road_box img {
 			height: 100%;
 		}
-
+		
 		.video_box,
 		.road_box {
 			position: relative;
@@ -78,7 +78,14 @@
 			/* flex: 1 1 calc(70% - 3px); */
 			/* width: calc(72% - 12px); */
 		}
-
+		.video{
+			padding-bottom: calc(100% * .57);
+		}
+		.video img{
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
 		.bet_box {
 			min-height: 415px;
 		}
@@ -129,7 +136,10 @@
 		</header>
 		<div class="content">
 			<div class="video_box">
-				<img src="./images/ba3/video.png" alt="">
+				<div class="video">
+					<img src="./images/ba3/video.png" alt="">
+				</div>
+				
 			</div>
 			<div class="bet_box">
 				<img src="./images/ba3/bet.png" alt="">
